[project]
name = "FlowBasePackage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Younthing", email = "fanxingfu3344@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.entry-points."uflow.packages"]
FlowBasePackage = "FlowBasePackage:FlowBasePackage"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
